--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,19 +43,21 @@ jobs:
         CLUB_PASSWORD: ${{ secrets.PASSWORD }}
       run: |
         python actions.py
-        echo "::set-env name=CLUB_DAY_NUMERS::$(cat sign_in_days.txt)"
+        echo "CLUB_DAY_NUMBERS=$(cat sign_in_days.txt)" >> $GITHUB_ENV
     - name: 'Get Date'
-      run: echo "::set-env name=REPORT_DATE::$(TZ=':Asia/Shanghai' date '+%Y-%m-%d %T')"
+      run: echo "REPORT_DATE=$(TZ=':Asia/Shanghai' date '+%Y-%m-%d %T')" >> $GITHUB_ENV
     - name: Send email
       uses: dawidd6/action-send-mail@master
       with:
-        server_address: smtp.163.com
-        server_port: 465
-        username: ${{ secrets.MAIL_USERNAME }}
+        server_address: smtp.yeah.net
+        server_port: 25
+        username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
         subject: 签到小助手提醒您 (${{env.REPORT_DATE}})
-        body: ${{env.CLUB_DAY_NUMERS}}
-        to: ${{ secrets.TEST_EMAIL }}
+        # 如果你想要发送纯文本邮件，请取消注释下一行，并注释掉 html_body 字段  
+        # body: ${{ env.CLUB_DAY_NUMBERS }}  
+        # 如果你想要发送 HTML 邮件，请确保 html_body 包含有效的 HTML 内容  
+        html_body: "<html><body><p>签到小助手提醒您：${{ env.CLUB_DAY_NUMBERS }}</p></body></html>"
+        to: ${{ secrets.EMAIL }}
         from: GitHub Actions
-        content_type: text/html
         attachments: /home/runner/paihang.png
