--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install selenium
+        sudo apt-get install google-chrome-stable
     - name: Sign In
       env:
         CLUB_USERNAME: ${{ secrets.USERNAME }}
