--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,6 +7,7 @@ on:
   # runs at 00:00 UTC every day
   schedule:
     - cron:  '0 0 * * *'
+    - cron:  '0 12 * * *'
   push:
     branches: [ master ]
     paths-ignore:
