--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,8 +25,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set date
+        run: echo "REPORT_DATE=$(date)" >> $GITHUB_ENV
+
       - name: Update timestamp
-        run: echo "Last updated: $(date)" > timestamp.txt
+        run: echo "Last updated:$(date)" > timestamp.txt
 
       - name: Commit changes
         run: |
@@ -45,10 +48,20 @@ jobs:
           server_port: 25
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: 签到小助手提醒您 (${{env.REPORT_DATE}})
-          # 如果你想要发送纯文本邮件，请取消注释下一行，并注释掉 html_body 字段  
-          # body: ${{ env.CLUB_DAY_NUMBERS }}  
-          # 如果你想要发送 HTML 邮件，请确保 html_body 包含有效的 HTML 内容  
-          html_body: "<html><body><p>签到小助手提醒您：当前仓库timestamp.txt文件更新成功</p></body></html>"
+          subject: 签到小助手提醒您 (${{ env.REPORT_DATE }})
+          html_body: |
+            <html>
+              <body>
+                <h2>仓库更新通知</h2>
+                <p>您好，以下是本次更新的详细内容：</p>
+                <ul>
+                  <li><strong>更新时间：</strong> ${{ env.REPORT_DATE }}</li>
+                  <li><strong>更新的文件：</strong> timestamp.txt</li>
+                  <li><strong>更新说明：</strong> 文件已成功更新以反映最新状态。</li>
+                </ul>
+                <p>如有任何疑问，请联系开发团队。</p>
+                <p>此邮件由 GitHub Actions 自动生成，请勿回复。</p>
+              </body>
+            </html>
           to: ${{ secrets.EMAIL }}
-          from: GitHub Actions
+          from: bot@yourdomain.com
