--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -40,6 +40,8 @@ jobs:
 
       - name: Push changes
         run: git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Send email
         uses: dawidd6/action-send-mail@master
