--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install selenium=4.34.2
+        pip install selenium==4.34.2
     - name: Sign In
       env:
         CLUB_USERNAME: ${{ secrets.USERNAME }}
